--- a/Autorizacion Nuevo.jrxml
+++ b/Autorizacion Nuevo.jrxml
@@ -1,5 +1,5 @@
 <!-- Created with Jaspersoft Studio version 7.0.1.final using JasperReports Library version 7.0.1-573496633c2b4074e32f433154b543003f7d2498  -->
-<jasperReport name="cesionesUno" language="java" pageWidth="595" pageHeight="842" columnWidth="525" leftMargin="50" rightMargin="20" topMargin="20" bottomMargin="20" uuid="586ce6c9-66a0-4368-9a2f-bda9835132e4" summaryNewPage="true">
+<jasperReport name="autorizacion_nuevo" language="java" pageWidth="595" pageHeight="842" columnWidth="525" leftMargin="50" rightMargin="20" topMargin="20" bottomMargin="20" uuid="7edb9273-f281-434f-a138-7c7dcb0af45f" summaryNewPage="true">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="nombre_ciudad" class="java.lang.String"/>
 	<parameter name="marca" class="java.lang.String"/>
